@startuml
!include Rectanagle.puml

set namespaceSeparator ::
Primitives::Rectanagle <|-- Primitives::Square 

class Primitives::Square{ 
    -float size = 0; 
    +Square(float x, float y, float size, float alpha = 1.0f);
    +Square(const Square&);
    +Square &operator=(const Square&);
    +{abstract}~Square();
}
Primitives::Line "1..n" *-- Primitives::Rectanagle
Primitive <|- Primitives::Line 
class Primitives::Line{ 
    -std::vector<Rectanagle> rectangles;
    +Line(int x0, int y0, int x1, int y1,int r,int g, int b, float alpha = 1.0f);
    +Line(const Line&);
    +Line &operator=(const Line&);
    +bool isVisable();
    +bool isNear(float x, float y, float radius);
    +void setTexture(std::string);
}
@enduml